fix: 수정된 z-index 값으로 swiper 버튼 배경 투명도 조정 및 주석 처리된 이미지 스타일 복원

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,9 @@
     opacity: 1;
   }
 }
+/* .swiper-slide .relative > img {
+  border-radius: 0.25rem;
+} */
 
 .animate-fade-in {
   animation: fade-in 0.5s ease-in-out forwards;
@@ -34,7 +37,7 @@
   }
   .swiper-button-prev,
   .swiper-button-next {
-    @apply transition hover:scale-125 bg-[var(--color-primary)]/45 rounded;
+    @apply transition hover:scale-125 bg-[var(--color-primary)]/55 rounded;
   }
   .swiper-button-prev::after,
   .swiper-button-next::after {
